--- a/src/main/java/view/swing/MainScreen.form
+++ b/src/main/java/view/swing/MainScreen.form
@@ -45,7 +45,7 @@
               </vspacer>
             </children>
           </grid>
-          <grid id="b9f47" binding="TransferTable" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="ff143" binding="panelTransfer" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="Данные для перемещения"/>
@@ -53,35 +53,51 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="29d4b" class="javax.swing.JButton" binding="buttonSaveTransfer">
+              <scrollpane id="9bcaf" binding="jpanelTransfer">
                 <constraints>
-                  <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="2" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
-                <properties>
-                  <text value="Button"/>
-                </properties>
-              </component>
-              <hspacer id="86491">
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="14fbf" class="javax.swing.JTable" binding="tableTransfer">
+                    <constraints/>
+                    <properties>
+                      <autoCreateRowSorter value="true"/>
+                      <autoResizeMode value="4"/>
+                    </properties>
+                  </component>
+                </children>
+              </scrollpane>
+              <hspacer id="9396b">
                 <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
               </hspacer>
-              <vspacer id="10ea6">
+              <vspacer id="428d5">
                 <constraints>
-                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
               </vspacer>
-              <component id="8e7ee" class="javax.swing.JTable" binding="tableTransfer">
+              <component id="4e917" class="javax.swing.JButton" binding="buttonSaveTransfer">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="50"/>
-                  </grid>
+                  <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <autoCreateRowSorter value="true"/>
-                  <autoResizeMode value="4"/>
+                  <text value="Сохранить"/>
                 </properties>
               </component>
+              <grid id="a97b4" binding="panelcheckboxes" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="true" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
+                <constraints>
+                  <grid row="0" column="2" row-span="3" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <minimum-size width="80" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+                <border type="bevel-lowered"/>
+                <children/>
+              </grid>
             </children>
           </grid>
         </children>
