--- a/src/main/java/view/swing/MainScreen.form
+++ b/src/main/java/view/swing/MainScreen.form
@@ -43,6 +43,14 @@
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
                 </constraints>
               </vspacer>
+              <component id="93f23" class="javax.swing.JButton" binding="buttonForSaveBAse">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Сохранить в Базу"/>
+                </properties>
+              </component>
             </children>
           </grid>
           <grid id="ff143" binding="panelTransfer" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
